- changed order of elements in html - added global declarated elements in script.js - used those elements in functions to shorten them - adjusted font size - added global declarated element in script.js - adjusted price displays to show prices with "," instead fo "." - corrected grammar mistakes in all js files - added "singleCalculation" function for easier price visibility in cart - added render.js file for better file structure - added overflow to cart and the dialog - fixed that footer stays at bottom of site - added min height to the main content

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
 
 .text_color {
     color: #7a7676;
+    font-size: 18px;
+}
+
+.size {
+    font-size: 18px;
 }
 
 header {
@@ -19,8 +24,6 @@ header {
     justify-content: space-between;
     align-content: center;
 }
-
-
 
 .space {
     padding-left: min(10px, 2%);
@@ -79,11 +82,10 @@ h2 {
 .dishes {
     padding-left: min(10px, 2%);
     padding-right: min(10px, 2%);
-
 }
 
 .small {
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .dish_overview {
