--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -3,12 +3,13 @@
     top: 0;
     right: 0;
     max-height: 100vh;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     z-index: 2;
     background-color: white;
     padding: 0;
     border: none;
+    overflow-y: auto;
 }
 
 .resp_cart {
@@ -16,7 +17,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 122px;
+    flex-direction: column;
+    height: 135px;
 }
 
 .resp_cart_open_heading {
@@ -38,9 +40,11 @@
 }
 
 .resp_cart_close_icon {
-    height: 48px;
-    width: 76px;
+    height: 42px;
+    width: 70px;
 }
+
+
 
 .long {
     display: flex;
